# mds-25

./: README.md  app.py  baseline.py  face_embeddings_cache.pkl  main.py  models.py  pyproject.toml  server.py  structure.txt  test.py  tree.js
downsizing_experimental/: det_500m.dynamic_int8_v1.onnx  det_500m.static_int8_v1.onnx  det_500m.static_int8_v2.onnx  downsizing.ipynb  onnx_to_tf.ipynb  quantized_model_simplified.onnx  yolo5_face_demo.py
downsizing_experimental/tflite_output/: fingerprint.pb  quantized_model_simplified_dynamic_range_quant.tflite  quantized_model_simplified_float16.tflite  quantized_model_simplified_float32.tflite  saved_model.pb
downsizing_experimental/tflite_output/variables/: variables.data-00000-of-00001  variables.index
embeddings_cache/: buffalo_l_embeddings.pkl  buffalo_quantized_dynamic_v1_embeddings.pkl  buffalo_quantized_v1_embeddings.pkl  buffalo_quantized_v2_embeddings.pkl  buffalo_s_embeddings.pkl
experimental/: initial_setup.ipynb
nextadmin-completed/: middleware.js  next.config.js  package-lock.json  package.json  tailwind.config.js
nextadmin-completed/app/: auth.js  authconfig.js  error.jsx  globals.css  layout.js  page.jsx
nextadmin-completed/app/components/: AuthGuard.jsx
nextadmin-completed/app/contexts/: NotificationContext.js  NotificationContext.jsx  ThemeContext.jsx
nextadmin-completed/app/dashboard/: layout.jsx  layout.wrapper.jsx  page.jsx
nextadmin-completed/app/lib/: actions.js  auth.js  cloudApi.js  data.js  models.js  utils.js
nextadmin-completed/scripts/: add-test-user.js
(+57 files in other folders)
